--- a/app2.plist
+++ b/app2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://AD6140.github.io/AveryDennison_v1.8.7.Resigned.ipa</string>
+					<string>https://AD6140.github.io/AveryDennison_v1.8.7.Resigned01122019.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
